Addded intra-* keys for other languages as well
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@4243 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/suse2013/common/l10n/da.xml
+++ b/suse2013/common/l10n/da.xml
@@ -75,6 +75,15 @@
       <l:template name="sect4" text="Afsnit &#34;%t&#34;"/>
       <l:template name="sect5" text="Afsnit &#34;%t&#34;"/>
       <l:template name="page.citation" text=" (side&#160;%p)"/>
+     
+      <l:template name="intra-article" text="Artikel “%t” "/>
+      <l:template name="intra-book" text="Bog “%t” "/>
+      <l:template name="intra-chapter" text="%n “%t”"/>
+      <!--<l:template name="intra-part" text="%B %t"/>-->
+      <l:template name="intra-sect1" text="%n “%t”"/>
+      <l:template name="intra-sect2" text="%n “%t”"/>
+      <l:template name="intra-sect3" text="%n “%t”"/>
+      <l:template name="intra-sect4" text="%n “%t”"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
