--- a/suse2013/common/l10n/de.xml
+++ b/suse2013/common/l10n/de.xml
@@ -68,6 +68,15 @@
 
    <l:context name="xref">
       <l:template name="page.citation" text=" (S.&#160;%p)"/>
+     
+      <l:template name="intra-article" text="Artikel „%t” "/>
+      <l:template name="intra-book" text="Buch „%t” "/>
+      <l:template name="intra-chapter" text="%n „%t”"/>
+      <!--<l:template name="intra-part" text="%n „%t”"/>-->
+      <l:template name="intra-sect1" text="%n „%t”"/>
+      <l:template name="intra-sect2" text="%n „%t”"/>
+      <l:template name="intra-sect3" text="%n „%t”"/>
+      <l:template name="intra-sect4" text="%n „%t”"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
