--- a/suse2013/common/l10n/es.xml
+++ b/suse2013/common/l10n/es.xml
@@ -73,7 +73,7 @@
 
    <l:context name="xref">
       <l:template name="page.citation" text=" (p.&#160;%p)"/>
-		<l:template name="bridgehead" text="Secci&#243;n&#160;&#8220;%t&#8221;"/>
+		  <l:template name="bridgehead" text="Secci&#243;n&#160;&#8220;%t&#8221;"/>
       <l:template name="chapter" text="Cap&#237;tulo&#160;%t"/>
       <l:template name="equation" text="Ecuaci&#243;n&#160;&#8220;%t&#8221;"/>
       <l:template name="example" text="Ejemplo&#160;&#8220;%t&#8221;"/>
@@ -93,6 +93,15 @@
       <l:template name="sect5" text="Secci&#243;n&#160;&#8220;%t&#8221;"/>
       <l:template name="section" text="Secci&#243;n&#160;&#8220;%t&#8221;"/>
       <l:template name="simplesect" text="secci&#243;n llamada &#8220;%t&#8221;"/>
+     
+      <l:template name="intra-article" text="Artículo “%t” "/>
+      <l:template name="intra-book" text="Libro “%t” "/>
+      <l:template name="intra-chapter" text="%n “%t”"/>
+      <!--<l:template name="intra-part" text="%B %t"/>-->
+      <l:template name="intra-sect1" text="%n “%t”"/>
+      <l:template name="intra-sect2" text="%n “%t”"/>
+      <l:template name="intra-sect3" text="%n “%t”"/>
+      <l:template name="intra-sect4" text="%n “%t”"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
