--- a/suse2013/common/l10n/hu.xml
+++ b/suse2013/common/l10n/hu.xml
@@ -70,6 +70,17 @@
       <l:template name="sect1-number" text="%n."/>
       <l:template name="sect2-number" text="%n."/>
    </l:context>
+ 
+   <l:context name="xref">
+      <l:template name="intra-article" text="Cikk „%t” "/>
+      <l:template name="intra-book" text="Könyv „%t” "/>
+      <l:template name="intra-chapter" text="%n „%t”"/>
+      <!--<l:template name="intra-part" text="%B %t"/>-->
+      <l:template name="intra-sect1" text="%n „%t”"/>
+      <l:template name="intra-sect2" text="%n „%t”"/>
+      <l:template name="intra-sect3" text="%n „%t”"/>
+      <l:template name="intra-sect4" text="%n „%t”"/>
+   </l:context>
 
    <l:context name="xref-number-and-title">
       <l:template name="appendix" style="nonumber"  text="%t&#160;mell&#233;klet"/>
