--- a/suse2013/common/l10n/ko.xml
+++ b/suse2013/common/l10n/ko.xml
@@ -68,6 +68,15 @@
 
    <l:context name="xref">
       <l:template name="page.citation" text="%p&#54168;&#51060;&#51648; "/><!--edited 20100528-->
+     
+      <l:template name="intra-article" text="문서 “%t” "/>
+      <l:template name="intra-book" text="책 “%t” "/>
+      <l:template name="intra-chapter" text="%n “%t”"/>
+      <!--<l:template name="intra-part" text="%B %t"/>-->
+      <l:template name="intra-sect1" text="%n “%t”"/>
+      <l:template name="intra-sect2" text="%n “%t”"/>
+      <l:template name="intra-sect3" text="%n “%t”"/>
+      <l:template name="intra-sect4" text="%n “%t”"/>
    </l:context>
 
    <l:context name="title">
