--- a/suse2013/common/l10n/nl.xml
+++ b/suse2013/common/l10n/nl.xml
@@ -79,6 +79,15 @@
       <l:template name="sect4" text="Gedeelte &#34;%t&#34;"/>
       <l:template name="sect5" text="Gedeelte &#34;%t&#34;"/>
       <l:template name="page.citation" text=" (pagina&#160;%p)"/>
+     
+      <l:template name="intra-article" text="Artikel “%t” "/>
+      <l:template name="intra-book" text="Boek “%t” "/>
+      <l:template name="intra-chapter" text="%n “%t”"/>
+      <!--<l:template name="intra-part" text="%B %t"/>-->
+      <l:template name="intra-sect1" text="%n “%t”"/>
+      <l:template name="intra-sect2" text="%n “%t”"/>
+      <l:template name="intra-sect3" text="%n “%t”"/>
+      <l:template name="intra-sect4" text="%n “%t”"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
