--- a/suse2013/common/l10n/pl.xml
+++ b/suse2013/common/l10n/pl.xml
@@ -71,6 +71,15 @@
       <l:template name="sect4" text="Sekcja &#8220;%t&#8221;"/>
       <l:template name="sect5" text="Sekcja &#8220;%t&#8221;"/>
       <l:template name="page.citation" text=" (page&#160;%p)"/>
+     
+      <l:template name="intra-article" text="Artykuł „%t” "/>
+      <l:template name="intra-book" text="Książka „%t” "/>
+      <l:template name="intra-chapter" text="%n „%t”"/>
+      <!--<l:template name="intra-part" text="%B %t"/>-->
+      <l:template name="intra-sect1" text="%n „%t”"/>
+      <l:template name="intra-sect2" text="%n „%t”"/>
+      <l:template name="intra-sect3" text="%n „%t”"/>
+      <l:template name="intra-sect4" text="%n „%t”"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
