--- a/suse2013/common/l10n/ru.xml
+++ b/suse2013/common/l10n/ru.xml
@@ -67,6 +67,15 @@
 
    <l:context name="xref">
       <l:template name="page.citation" text=" (стр.&#160;%p)"/>
+     
+      <l:template name="intra-article" text="Статья «%t» "/>
+      <l:template name="intra-book" text="Книга «%t» "/>
+      <l:template name="intra-chapter" text="%n «%t»"/>
+      <!--<l:template name="intra-part" text="%B %t"/>-->
+      <l:template name="intra-sect1" text="%n «%t»"/>
+      <l:template name="intra-sect2" text="%n «%t»"/>
+      <l:template name="intra-sect3" text="%n «%t»"/>
+      <l:template name="intra-sect4" text="%n «%t»"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
