--- a/suse2013/common/l10n/en.xml
+++ b/suse2013/common/l10n/en.xml
@@ -74,6 +74,15 @@
       <l:template name="sect4" text="Section &#8220;%t&#8221;"/>
       <l:template name="sect5" text="Section &#8220;%t&#8221;"/>
       <l:template name="page.citation" text=" (page&#160;%p)"/>
+     
+      <l:template name="intra-article" text="Article “%t” "/>
+      <l:template name="intra-book" text="Book “%t” "/>
+      <l:template name="intra-chapter" text="%n “%t”"/>
+      <!--<l:template name="intra-part" text="%B %t"/>-->
+      <l:template name="intra-sect1" text="%n “%t”"/>
+      <l:template name="intra-sect2" text="%n “%t”"/>
+      <l:template name="intra-sect3" text="%n “%t”"/>
+      <l:template name="intra-sect4" text="%n “%t”"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
