--- a/suse2013/common/l10n/fi.xml
+++ b/suse2013/common/l10n/fi.xml
@@ -70,6 +70,15 @@
       <l:template name="sect4" text="Osa &#8221;%t&#8221;"/>
       <l:template name="sect5" text="Osa &#8221;%t&#8221;"/>
       <l:template name="page.citation" text=" (sivu&#160;%p)"/>
+     
+      <l:template name="intra-article" text="Artikkeli ”%t”"/>
+      <l:template name="intra-book" text="Kirja ”%t” "/>
+      <l:template name="intra-chapter" text="%n ”%t”"/>
+      <!--<l:template name="intra-part" text="%B %t"/>-->
+      <l:template name="intra-sect1" text="%n ”%t”"/>
+      <l:template name="intra-sect2" text="%n ”%t”"/>
+      <l:template name="intra-sect3" text="%n ”%t”"/>
+      <l:template name="intra-sect4" text="%n ”%t”"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
