--- a/suse2013/common/l10n/it.xml
+++ b/suse2013/common/l10n/it.xml
@@ -79,6 +79,15 @@
       <l:template name="sect5" text="Sezione &quot;%t&quot;"/>
       <l:template name="section" text="Sezione &quot;%t&quot;"/>
       <l:template name="simplesect" text="Sezione &quot;%t&quot;"/>
+     
+      <l:template name="intra-article" text="Articolo «%t» "/>
+      <l:template name="intra-book" text="Libro «%t» "/>
+      <l:template name="intra-chapter" text="%n «%t»"/>
+      <!--<l:template name="intra-part" text="%B %t"/>-->
+      <l:template name="intra-sect1" text="%n «%t»"/>
+      <l:template name="intra-sect2" text="%n «%t»"/>
+      <l:template name="intra-sect3" text="%n «%t»"/>
+      <l:template name="intra-sect4" text="%n «%t»"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
