--- a/suse2013/common/l10n/pt_br.xml
+++ b/suse2013/common/l10n/pt_br.xml
@@ -67,6 +67,15 @@
 
    <l:context name="xref">
       <l:template name="page.citation" text=" (p&#160;%p)"/>
+     
+      <l:template name="intra-article" text="Artigo “%t” "/>
+      <l:template name="intra-book" text="Livro “%t” "/>
+      <l:template name="intra-chapter" text="%n “%t”"/>
+      <!--<l:template name="intra-part" text="%B %t"/>-->
+      <l:template name="intra-sect1" text="%n “%t”"/>
+      <l:template name="intra-sect2" text="%n “%t”"/>
+      <l:template name="intra-sect3" text="%n “%t”"/>
+      <l:template name="intra-sect4" text="%n “%t”"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
