--- a/suse2013/common/l10n/sv.xml
+++ b/suse2013/common/l10n/sv.xml
@@ -71,6 +71,15 @@
       <l:template name="sect4" text="Avsnittet &#8221;%t&#8221;"/>
       <l:template name="sect5" text="Avsnittet &#8221;%t&#8221;"/>
       <l:template name="page.citation" text=" (sidan&#160;%p)"/>
+     
+      <l:template name="intra-article" text="Artikel ”%t” "/>
+      <l:template name="intra-book" text="Bok ”%t” "/>
+      <l:template name="intra-chapter" text="%n ”%t”"/>
+      <!--<l:template name="intra-part" text="%B %t"/>-->
+      <l:template name="intra-sect1" text="%n ”%t”"/>
+      <l:template name="intra-sect2" text="%n ”%t”"/>
+      <l:template name="intra-sect3" text="%n ”%t”"/>
+      <l:template name="intra-sect4" text="%n ”%t”"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
