Added small fixes for intra-sectX key
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@4249 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/suse2013/common/l10n/zh_cn.xml
+++ b/suse2013/common/l10n/zh_cn.xml
@@ -140,10 +140,10 @@
      <l:template name="intra-book" text="《%t》第 "/>
      <l:template name="intra-chapter" text="%n 章“%t”中的第"/>
      <!--<l:template name="intra-part" text="%B %t"/>-->
-     <l:template name="intra-sect1" text="%n 节“%t”"/>
-     <l:template name="intra-sect2" text="%n 节“%t”"/>
-     <l:template name="intra-sect3" text="%n 节“%t”"/>
-     <l:template name="intra-sect4" text="%n 节“%t”"/>
+     <l:template name="intra-sect1" text="中的第 %n 节“%t”"/>
+     <l:template name="intra-sect2" text="中的第 %n 节“%t”"/>
+     <l:template name="intra-sect3" text="中的第 %n 节“%t”"/>
+     <l:template name="intra-sect4" text="中的第 %n 节“%t”"/>
    </l:context>
 
    <l:context name="title-numbered">
