--- a/suse2013/common/l10n/zh_tw.xml
+++ b/suse2013/common/l10n/zh_tw.xml
@@ -77,8 +77,6 @@
       <l:template name="itemizedlist-title" text="%t"/>
       <l:template name="orderedlist-label" text=""/>
       <l:template name="orderedlist-title" text="%t"/>
-     
-      
    </l:context>
 
    <l:context name="xep-bookmark-title">
@@ -162,10 +160,10 @@
     <l:template name="intra-book" text="《%t》第 "/>
     <l:template name="intra-chapter" text="%n 章「%t」"/>
     <!--<l:template name="intra-part" text="%B %t"/>-->
-    <l:template name="intra-sect1" text="%n 節「%t」"/>
-    <l:template name="intra-sect2" text="%n 節「%t」"/>
-    <l:template name="intra-sect3" text="%n 節「%t」"/>
-    <l:template name="intra-sect4" text="%n 節「%t」"/>
+    <l:template name="intra-sect1" text="中的第 %n 節「%t」"/>
+    <l:template name="intra-sect2" text="中的第 %n 節「%t」"/>
+    <l:template name="intra-sect3" text="中的第 %n 節「%t」"/>
+    <l:template name="intra-sect4" text="中的第 %n 節「%t」"/>
   </l:context>
 
    <l:context name="xref-number">
