Improved xrefs to other books
* Added interpunction ", "
* Missing chapter and section words added in l10n files


git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@4376 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/suse2013/common/l10n/cs.xml
+++ b/suse2013/common/l10n/cs.xml
@@ -69,14 +69,14 @@
       <l:template name="sect5" text="&#268;&#225;st &#8222;%t&#8220;"/>
       <l:template name="page.citation" text=" (strana&#160;%p)"/>
       
-      <l:template name="intra-article" text="Článek „%t” "/>
-      <l:template name="intra-book" text="Kniha „%t” "/>
-      <l:template name="intra-chapter" text="%n „%t”"/>
+      <l:template name="intra-article" text="Článek „%t”"/>
+      <l:template name="intra-book" text="Kniha „%t”"/>
+      <l:template name="intra-chapter" text="Kapitola %n „%t”"/>
       <!--<l:template name="intra-part" text="%B %t"/>-->
-      <l:template name="intra-sect1" text="%n „%t”"/>
-      <l:template name="intra-sect2" text="%n „%t”"/>
-      <l:template name="intra-sect3" text="%n „%t”"/>
-      <l:template name="intra-sect4" text="%n „%t”"/>
+      <l:template name="intra-sect1" text="Oddíl %n „%t”"/>
+      <l:template name="intra-sect2" text="Oddíl %n „%t”"/>
+      <l:template name="intra-sect3" text="Oddíl %n „%t”"/>
+      <l:template name="intra-sect4" text="Oddíl %n „%t”"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
