--- a/suse2013/common/l10n/de.xml
+++ b/suse2013/common/l10n/de.xml
@@ -69,14 +69,24 @@
    <l:context name="xref">
       <l:template name="page.citation" text=" (S.&#160;%p)"/>
      
-      <l:template name="intra-article" text="Artikel „%t” "/>
-      <l:template name="intra-book" text="Buch „%t” "/>
-      <l:template name="intra-chapter" text="%n „%t”"/>
+      <l:template name="intra-article" text="Artikel „%t”"/>
+      <l:template name="intra-book" text="Buch „%t”"/>
+      <l:template name="intra-chapter" text="Kapitel %n „%t”"/>
       <!--<l:template name="intra-part" text="%n „%t”"/>-->
-      <l:template name="intra-sect1" text="%n „%t”"/>
-      <l:template name="intra-sect2" text="%n „%t”"/>
-      <l:template name="intra-sect3" text="%n „%t”"/>
-      <l:template name="intra-sect4" text="%n „%t”"/>
+      <l:template name="intra-sect1" text="Abschnitt %n „%t”"/>
+      <l:template name="intra-sect2" text="Abschnitt %n „%t”"/>
+      <l:template name="intra-sect3" text="Abschnitt %n „%t”"/>
+      <l:template name="intra-sect4" text="Abschnitt %n „%t”"/>
+     
+      <l:template name="intra-example" text="Beispiel %n “%t”"/>
+      <l:template name="intra-figure" text="Abbildung %n “%t”"/>
+      <l:template name="intra-preface" text="Vorwort “%t”"/>
+      <l:template name="intra-procedure" text="Prozedur %n “%t”"/>
+      <l:template name="intra-table" text="Tabelle %n “%t”"/>
+     
+      <l:template name="intra-variablelist" text="“%t”"/>
+      <l:template name="intra-orderedlist" text="“%t”"/>
+      <l:template name="intra-itemizedlist" text="“%t”"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
