--- a/suse2013/common/l10n/en.xml
+++ b/suse2013/common/l10n/en.xml
@@ -75,14 +75,24 @@
       <l:template name="sect5" text="Section &#8220;%t&#8221;"/>
       <l:template name="page.citation" text=" (page&#160;%p)"/>
      
-      <l:template name="intra-article" text="Article “%t” "/>
-      <l:template name="intra-book" text="Book “%t” "/>
-      <l:template name="intra-chapter" text="%n “%t”"/>
+      <l:template name="intra-article" text="Article “%t”"/>
+      <l:template name="intra-book" text="Book “%t”"/>
+      <l:template name="intra-chapter" text="Chapter %n “%t”"/>
       <!--<l:template name="intra-part" text="%B %t"/>-->
-      <l:template name="intra-sect1" text="%n “%t”"/>
-      <l:template name="intra-sect2" text="%n “%t”"/>
-      <l:template name="intra-sect3" text="%n “%t”"/>
-      <l:template name="intra-sect4" text="%n “%t”"/>
+      <l:template name="intra-sect1" text="Section %n “%t”"/>
+      <l:template name="intra-sect2" text="Section %n “%t”"/>
+      <l:template name="intra-sect3" text="Section %n “%t”"/>
+      <l:template name="intra-sect4" text="Section %n “%t”"/>
+      <l:template name="intra-preface" text="Preface “%t”"/>
+      <l:template name="intra-figure" text="Figure %n “%t”"/>
+      <l:template name="intra-table" text="Table %n “%t”"/>
+      <l:template name="intra-example" text="Example %n “%t”"/>
+      <l:template name="intra-procedure" text="Procedure %n “%t”"/>
+     
+      <l:template name="intra-variablelist" text="“%t”"/>
+      <l:template name="intra-orderedlist" text="“%t”"/>
+      <l:template name="intra-itemizedlist" text="“%t”"/>
+      
    </l:context>
 
    <l:context name="xref-number-and-title">
