--- a/suse2013/common/l10n/es.xml
+++ b/suse2013/common/l10n/es.xml
@@ -94,14 +94,14 @@
       <l:template name="section" text="Secci&#243;n&#160;&#8220;%t&#8221;"/>
       <l:template name="simplesect" text="secci&#243;n llamada &#8220;%t&#8221;"/>
      
-      <l:template name="intra-article" text="Artículo “%t” "/>
-      <l:template name="intra-book" text="Libro “%t” "/>
-      <l:template name="intra-chapter" text="%n “%t”"/>
+      <l:template name="intra-article" text="Artículo “%t”"/>
+      <l:template name="intra-book" text="Libro “%t”"/>
+      <l:template name="intra-chapter" text="Capítulo %n “%t”"/>
       <!--<l:template name="intra-part" text="%B %t"/>-->
-      <l:template name="intra-sect1" text="%n “%t”"/>
-      <l:template name="intra-sect2" text="%n “%t”"/>
-      <l:template name="intra-sect3" text="%n “%t”"/>
-      <l:template name="intra-sect4" text="%n “%t”"/>
+      <l:template name="intra-sect1" text="Sección %n “%t”"/>
+      <l:template name="intra-sect2" text="Sección %n “%t”"/>
+      <l:template name="intra-sect3" text="Sección %n “%t”"/>
+      <l:template name="intra-sect4" text="Sección %n “%t”"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
