--- a/suse2013/common/l10n/fr.xml
+++ b/suse2013/common/l10n/fr.xml
@@ -74,14 +74,14 @@
    <l:context name="xref">
       <l:template name="page.citation" text=" (p.&#160;%p)"/>
      
-      <l:template name="intra-article" text="Article « %t » "/>
-      <l:template name="intra-book" text="Livre « %t » "/>
-      <l:template name="intra-chapter" text="%n “%t »"/>
+      <l:template name="intra-article" text="Article « %t »"/>
+      <l:template name="intra-book" text="Livre « %t »"/>
+      <l:template name="intra-chapter" text="Chapitre %n “%t »"/>
       <!--<l:template name="intra-part" text="%B %t"/>-->
-      <l:template name="intra-sect1" text="%n « %t »"/>
-      <l:template name="intra-sect2" text="%n « %t »"/>
-      <l:template name="intra-sect3" text="%n « %t »"/>
-      <l:template name="intra-sect4" text="%n « %t »"/>
+      <l:template name="intra-sect1" text="Section %n « %t »"/>
+      <l:template name="intra-sect2" text="Section %n « %t »"/>
+      <l:template name="intra-sect3" text="Section %n « %t »"/>
+      <l:template name="intra-sect4" text="Section %n « %t »"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
