--- a/suse2013/common/l10n/it.xml
+++ b/suse2013/common/l10n/it.xml
@@ -80,14 +80,14 @@
       <l:template name="section" text="Sezione &quot;%t&quot;"/>
       <l:template name="simplesect" text="Sezione &quot;%t&quot;"/>
      
-      <l:template name="intra-article" text="Articolo «%t» "/>
+      <l:template name="intra-article" text="Articolo «%t»"/>
       <l:template name="intra-book" text="Libro «%t» "/>
-      <l:template name="intra-chapter" text="%n «%t»"/>
+      <l:template name="intra-chapter" text="Capitolo %n «%t»"/>
       <!--<l:template name="intra-part" text="%B %t"/>-->
-      <l:template name="intra-sect1" text="%n «%t»"/>
-      <l:template name="intra-sect2" text="%n «%t»"/>
-      <l:template name="intra-sect3" text="%n «%t»"/>
-      <l:template name="intra-sect4" text="%n «%t»"/>
+      <l:template name="intra-sect1" text="Sezione %n «%t»"/>
+      <l:template name="intra-sect2" text="Sezione %n «%t»"/>
+      <l:template name="intra-sect3" text="Sezione %n «%t»"/>
+      <l:template name="intra-sect4" text="Sezione %n «%t»"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
