--- a/suse2013/common/l10n/ja.xml
+++ b/suse2013/common/l10n/ja.xml
@@ -65,14 +65,14 @@
    <l:context name="xref">
       <l:template name="page.citation" text=" (%p&#160;&#12506;&#12540;&#12472;)"/>
      
-     <l:template name="intra-article" text="項目 「%t」 "/>
-      <l:template name="intra-book" text="ブック 「%t」 "/>
-      <l:template name="intra-chapter" text="%n 「%t」"/>
+     <l:template name="intra-article" text="項目 「%t」"/>
+      <l:template name="intra-book" text="ブック 「%t」"/>
+      <l:template name="intra-chapter" text="章 %n 「%t」"/>
       <!--<l:template name="intra-part" text="%B %t"/>-->
-      <l:template name="intra-sect1" text="%n 「%t」"/>
-      <l:template name="intra-sect2" text="%n 「%t」"/>
-      <l:template name="intra-sect3" text="%n 「%t」"/>
-      <l:template name="intra-sect4" text="%n 「%t」"/>
+      <l:template name="intra-sect1" text="項 %n 「%t」"/>
+      <l:template name="intra-sect2" text="項 %n 「%t」"/>
+      <l:template name="intra-sect3" text="項 %n 「%t」"/>
+      <l:template name="intra-sect4" text="項 %n 「%t」"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
