--- a/suse2013/common/l10n/lt_lt.xml
+++ b/suse2013/common/l10n/lt_lt.xml
@@ -73,6 +73,24 @@
       <l:template name="sect4" text="&#8222;%t&#8220;"/>
       <l:template name="sect5" text="&#8222;%t&#8220;"/>
       <l:template name="page.citation" text=" (p.&#160;%p)"/>
+     
+      <l:template name="intra-article" text="Straipsnis “%t”"/>
+      <l:template name="intra-book" text="Knyga “%t”"/>
+      <l:template name="intra-chapter" text="Skyrius %n “%t”"/>
+      <!--<l:template name="intra-part" text="%B %t"/>-->
+      <l:template name="intra-sect1" text="Skyrius %n “%t”"/>
+      <l:template name="intra-sect2" text="Skyrius %n “%t”"/>
+      <l:template name="intra-sect3" text="Skyrius %n “%t”"/>
+      <l:template name="intra-sect4" text="Skyrius %n “%t”"/>
+      <l:template name="intra-preface" text="Įvadas “%t”"/>
+      <l:template name="intra-figure" text="Pav. %n “%t”"/>
+      <l:template name="intra-table" text="Lentelė %n “%t”"/>
+      <l:template name="intra-example" text="Pavyzdys %n “%t”"/>
+      <l:template name="intra-procedure" text="Procedūra %n “%t”"/>
+     
+      <l:template name="intra-variablelist" text="“%t”"/>
+      <l:template name="intra-orderedlist" text="“%t”"/>
+      <l:template name="intra-itemizedlist" text="“%t”"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
