--- a/suse2013/common/l10n/sv.xml
+++ b/suse2013/common/l10n/sv.xml
@@ -74,12 +74,12 @@
      
       <l:template name="intra-article" text="Artikel ”%t” "/>
       <l:template name="intra-book" text="Bok ”%t” "/>
-      <l:template name="intra-chapter" text="%n ”%t”"/>
+      <l:template name="intra-chapter" text="Kapitel %n ”%t”"/>
       <!--<l:template name="intra-part" text="%B %t"/>-->
-      <l:template name="intra-sect1" text="%n ”%t”"/>
-      <l:template name="intra-sect2" text="%n ”%t”"/>
-      <l:template name="intra-sect3" text="%n ”%t”"/>
-      <l:template name="intra-sect4" text="%n ”%t”"/>
+      <l:template name="intra-sect1" text="Section %n ”%t”"/>
+      <l:template name="intra-sect2" text="Section %n ”%t”"/>
+      <l:template name="intra-sect3" text="Section %n ”%t”"/>
+      <l:template name="intra-sect4" text="Section %n ”%t”"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
