--- a/suse2013/common/l10n/zh_cn.xml
+++ b/suse2013/common/l10n/zh_cn.xml
@@ -136,14 +136,24 @@
    </l:context>
 
    <l:context name="xref">
-     <l:template name="intra-article" text="《%t》文章 "/>
-     <l:template name="intra-book" text="《%t》第 "/>
-     <l:template name="intra-chapter" text="%n 章“%t”中的第"/>
+     <l:template name="intra-article" text="《%t》文章"/>
+     <l:template name="intra-book" text="《%t》第"/>
+     <l:template name="intra-chapter" text="章 %n 章“%t”中的第"/>
      <!--<l:template name="intra-part" text="%B %t"/>-->
      <l:template name="intra-sect1" text="中的第 %n 节“%t”"/>
      <l:template name="intra-sect2" text="中的第 %n 节“%t”"/>
      <l:template name="intra-sect3" text="中的第 %n 节“%t”"/>
      <l:template name="intra-sect4" text="中的第 %n 节“%t”"/>
+     
+     <l:template name="intra-example" text="例 %n “%t”"/>
+     <l:template name="intra-figure" text="图 %n “%t”"/>
+     <l:template name="intra-preface" text="前言 “%t”"/>
+     <l:template name="intra-procedure" text="过程 %n “%t”"/>
+     <l:template name="intra-table" text="表 %n “%t”"/>
+     
+     <l:template name="intra-variablelist" text="“%t”"/>
+     <l:template name="intra-orderedlist" text="“%t”"/>
+     <l:template name="intra-itemizedlist" text="“%t”"/>
    </l:context>
 
    <l:context name="title-numbered">
