--- a/suse2013/common/l10n/hu.xml
+++ b/suse2013/common/l10n/hu.xml
@@ -72,14 +72,14 @@
    </l:context>
  
    <l:context name="xref">
-      <l:template name="intra-article" text="Cikk „%t” "/>
+      <l:template name="intra-article" text="Cikk „%t”"/>
       <l:template name="intra-book" text="Könyv „%t” "/>
-      <l:template name="intra-chapter" text="%n „%t”"/>
+      <l:template name="intra-chapter" text="Fejezet %n „%t”"/>
       <!--<l:template name="intra-part" text="%B %t"/>-->
-      <l:template name="intra-sect1" text="%n „%t”"/>
-      <l:template name="intra-sect2" text="%n „%t”"/>
-      <l:template name="intra-sect3" text="%n „%t”"/>
-      <l:template name="intra-sect4" text="%n „%t”"/>
+      <l:template name="intra-sect1" text="Szakasz %n „%t”"/>
+      <l:template name="intra-sect2" text="Szakasz %n „%t”"/>
+      <l:template name="intra-sect3" text="Szakasz %n „%t”"/>
+      <l:template name="intra-sect4" text="Szakasz %n „%t”"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
