--- a/suse2013/common/l10n/pt_br.xml
+++ b/suse2013/common/l10n/pt_br.xml
@@ -68,14 +68,14 @@
    <l:context name="xref">
       <l:template name="page.citation" text=" (p&#160;%p)"/>
      
-      <l:template name="intra-article" text="Artigo “%t” "/>
-      <l:template name="intra-book" text="Livro “%t” "/>
-      <l:template name="intra-chapter" text="%n “%t”"/>
+      <l:template name="intra-article" text="Artigo “%t”"/>
+      <l:template name="intra-book" text="Livro “%t”"/>
+      <l:template name="intra-chapter" text="Capítulo %n “%t”"/>
       <!--<l:template name="intra-part" text="%B %t"/>-->
-      <l:template name="intra-sect1" text="%n “%t”"/>
-      <l:template name="intra-sect2" text="%n “%t”"/>
-      <l:template name="intra-sect3" text="%n “%t”"/>
-      <l:template name="intra-sect4" text="%n “%t”"/>
+      <l:template name="intra-sect1" text="Seção %n “%t”"/>
+      <l:template name="intra-sect2" text="Seção %n “%t”"/>
+      <l:template name="intra-sect3" text="Seção %n “%t”"/>
+      <l:template name="intra-sect4" text="Seção %n “%t”"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
