--- a/suse2013/common/l10n/zh_tw.xml
+++ b/suse2013/common/l10n/zh_tw.xml
@@ -156,14 +156,24 @@
 
     <l:template name="page.citation" text=" [%p&#38913;]"/>
 
-    <l:template name="intra-article" text="《%t》文章 "/>
-    <l:template name="intra-book" text="《%t》第 "/>
-    <l:template name="intra-chapter" text="%n 章「%t」"/>
+    <l:template name="intra-article" text="《%t》文章"/>
+    <l:template name="intra-book" text="《%t》第"/>
+    <l:template name="intra-chapter" text="章 %n 章「%t」"/>
     <!--<l:template name="intra-part" text="%B %t"/>-->
     <l:template name="intra-sect1" text="中的第 %n 節「%t」"/>
     <l:template name="intra-sect2" text="中的第 %n 節「%t」"/>
     <l:template name="intra-sect3" text="中的第 %n 節「%t」"/>
     <l:template name="intra-sect4" text="中的第 %n 節「%t」"/>
+    
+    <l:template name="intra-example" text="範例 %n “%t”"/>
+    <l:template name="intra-figure" text="圖形 %n “%t”"/>
+    <l:template name="intra-preface" text="序言 “%t”"/>
+    <l:template name="intra-procedure" text="過程 %n “%t”"/>
+    <l:template name="intra-table" text="表格 %n “%t”"/>
+     
+    <l:template name="intra-variablelist" text="“%t”"/>
+    <l:template name="intra-orderedlist" text="“%t”"/>
+    <l:template name="intra-itemizedlist" text="“%t”"/>
   </l:context>
 
    <l:context name="xref-number">
