--- a/suse2013/common/l10n/hu.xml
+++ b/suse2013/common/l10n/hu.xml
@@ -31,6 +31,9 @@
    <l:gentext key="contentsoverview" text="Tartalom"/>
    <l:gentext key="showcontentsoverview" text="Tartalom megjelenítése"/>
    <l:gentext key="find" text="Keresés"/>
+
+   <l:gentext key="runinhead.default.title.end.punct" text="."/>
+
    <l:gentext key="navigation" text="Navigáció"/>
    <l:gentext key="sharethispage" text="Az oldal megosztása: "/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
