--- a/suse2013/common/l10n/zh_tw.xml
+++ b/suse2013/common/l10n/zh_tw.xml
@@ -34,6 +34,9 @@
    <l:gentext key="contentsoverview" text="內容"/>
    <l:gentext key="showcontentsoverview" text="顯示內容"/>
    <l:gentext key="find" text="尋找"/>
+
+   <l:gentext key="runinhead.default.title.end.punct" text="&#xff1a;"/>
+
    <l:gentext key="navigation" text="導覽"/>
    <l:gentext key="sharethispage" text="共享此頁面︰ "/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
