--- a/suse2013/common/l10n/de.xml
+++ b/suse2013/common/l10n/de.xml
@@ -24,6 +24,9 @@
    <l:gentext key="contentsoverview" text="Inhalt"/>
    <l:gentext key="showcontentsoverview" text="Inhalt anzeigen"/>
    <l:gentext key="find" text="Suchen"/>
+
+   <l:gentext key="runinhead.default.title.end.punct" text="."/>
+
    <l:gentext key="navigation" text="Navigation"/>
    <l:gentext key="sharethispage" text="Diese Seite teilen: "/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
