--- a/suse2013/common/l10n/ja.xml
+++ b/suse2013/common/l10n/ja.xml
@@ -29,6 +29,9 @@
    <l:gentext key="contentsoverview" text="コンテンツ"/>
    <l:gentext key="showcontentsoverview" text="コンテンツの表示"/>
    <l:gentext key="find" text="検索"/>
+
+   <l:gentext key="runinhead.default.title.end.punct" text="&#xff1a;"/>
+
    <l:gentext key="navigation" text="ナビゲーション"/>
    <l:gentext key="sharethispage" text="このページを共有: "/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
