--- a/suse2013/common/l10n/sv.xml
+++ b/suse2013/common/l10n/sv.xml
@@ -31,6 +31,9 @@
    <l:gentext key="contentsoverview" text="Innehåll"/>
    <l:gentext key="showcontentsoverview" text="Visa innehåll"/>
    <l:gentext key="find" text="Hitta"/>
+
+   <l:gentext key="runinhead.default.title.end.punct" text="."/>
+
    <l:gentext key="navigation" text="Navigering"/>
    <l:gentext key="sharethispage" text="Dela den här sidan: "/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
