--- a/suse2013/common/l10n/zh_cn.xml
+++ b/suse2013/common/l10n/zh_cn.xml
@@ -24,6 +24,9 @@
    <l:gentext key="contentsoverview" text="内容"/>
    <l:gentext key="showcontentsoverview" text="显示内容"/>
    <l:gentext key="find" text="查找"/>
+
+   <l:gentext key="runinhead.default.title.end.punct" text="&#xff1a;"/>
+
    <l:gentext key="navigation" text="导航"/>
    <l:gentext key="sharethispage" text="分享此页： "/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
