--- a/suse2013/common/l10n/sv.xml
+++ b/suse2013/common/l10n/sv.xml
@@ -9,7 +9,9 @@
    <l:gentext key="ListofAuthors"   text="Lista &#246;ver f&#246;rfattare"/>
    <l:gentext key="Contributor"     text="Deltagare"/>
    <l:gentext key="Contributors"    text="Deltagare"/>
-   <l:gentext key="PubDate" text="Publiceringsdatum"/> 
+
+   <!-- Workaround for a bug in the original stylesheets -->
+   <l:gentext key="PubDate" text="Publiceringsdatum"/>
    <l:gentext key="pubdate" text="publiceringsdatum"/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; SNABBSTARTSKORT"/>
